--- a/src/Provider/POCOGenerator.Cassandra/POCOGenerator.Cassandra.csproj
+++ b/src/Provider/POCOGenerator.Cassandra/POCOGenerator.Cassandra.csproj
@@ -38,10 +38,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Cassandra">
-      <HintPath>..\packages\CassandraCSharpDriver.1.0.3\lib\Cassandra.dll</HintPath>
+      <HintPath>E:\NOSQL POCO\src\NOSQLPOCOGenerator\packages\CassandraCSharpDriver.1.0.3\lib\Cassandra.dll</HintPath>
+    </Reference>
+    <Reference Include="CassandraSharp">
+      <HintPath>E:\NOSQL POCO\src\NOSQLPOCOGenerator\packages\cassandra-sharp-core.3.3.2\lib\net45\CassandraSharp.dll</HintPath>
     </Reference>
     <Reference Include="CassandraSharp.Interfaces">
-      <HintPath>..\packages\cassandra-sharp-interfaces.3.3.1\lib\net45\CassandraSharp.Interfaces.dll</HintPath>
+      <HintPath>E:\NOSQL POCO\src\NOSQLPOCOGenerator\packages\cassandra-sharp-interfaces.3.3.1\lib\net45\CassandraSharp.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
